--- a/mysite/blog/templates/books/bookList.html
+++ b/mysite/blog/templates/books/bookList.html
@@ -33,9 +33,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../reviews">RECENZJE</a>
                     </li>
-                     <li class="nav-item">
-                        <a class="nav-link" href="../contact">KONTAKT</a>
-                    </li>
                 </ul>
              </div>
                 <ul class="nav navbar-nav navbar-right">
@@ -78,13 +75,12 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="aboutPanel">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">Krótko o mnie</div>
-                            <div class="panel-body">Cześć, jestem Aleksander.</br>
+                        <h5>Krótko o mnie</h5>
+                           Cześć, jestem Aleksander.</br>
                             Studiuję informatykę, a w wolnym czasie oddaję się pasji, jaką jest pisanie.</br>
-                            Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.</br>
-                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)</div>
-                        </div>
+                            Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.
+                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)<br>
+                            Jeśli chcesz dowiedzieć się więcej o mnie i o forum, zapraszam <a href="/aboutMe">tutaj</a>.
                     </div>
                  </div>
             </div>
