--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -130,6 +130,7 @@ hr {
     text-align: center;
     margin-top: 15px;
 
+
 }
 
 h1 {
@@ -145,9 +146,6 @@ img {
     font: left;
 }
 
-.row {
-
-}
 
 .leftSide {
 
@@ -164,6 +162,16 @@ img {
     margin-left: 15px;
 }
 
-.dupa{
-    font:right;
+ .pagination li {
+     background-color: rgba(255,255,255, 0.7);
+    border: 1px solid gray;
+    width: 30px;
+    text-align: center;
+
+}
+
+.pagination  {
+
+
+        font:right;
 }
