--- a/mysite/blog/templates/login/loginTemplate.html
+++ b/mysite/blog/templates/login/loginTemplate.html
@@ -74,7 +74,7 @@
                         <p>Password:</p>
                         <p>{{ form.password }}</p>
                         <p>{{ form.errors }}</p>
-                        <input type="submit" value="Zaloguj się" name="SignUpForm">
+                        <input class="click" type="submit" value="Zaloguj się" name="SignUpForm">
                         </form>
                         Jeśli nie posiadasz jeszcze konta, <a href="/signup">Zarejestruj się</a>
                         {% endif %}
