--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -11,11 +11,9 @@
 }
 
 .post {
-
     background-color: white;
     opacity: 0.7;
 }
-
 
 
 h1, h2, h3, h4, h5, p, input {
@@ -45,9 +43,7 @@ h1, h2, h3, h4, h5, p, input {
 
 .post {
     margin-bottom: 20px;
-
     border: 1px solid gray;
-
 }
 
 .post h3 a, .post h3 a:visited {
@@ -58,7 +54,6 @@ h1, h2, h3, h4, h5, p, input {
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
-
 }
 
 .navbar {
@@ -67,7 +62,6 @@ h1, h2, h3, h4, h5, p, input {
 
 .nav-link {
     font-size: large;
-
 }
 
 body {
@@ -90,8 +84,6 @@ body {
     background-color: rgba(255,255,255, 0.7);
      border: 1px solid gray;
      margin-left: 30px;
-
-
 }
 
 
@@ -116,13 +108,10 @@ hr {
 
 .textDetails  {
     background-color: rgba(255,255,255, 0.7);
-     border-top: 1px solid gray;
-     border-left: 1px solid gray;
-     border-right: 1px solid gray;
-        border-bottom: 1px solid gray;
-
-
-
+    border-top: 1px solid gray;
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    border-bottom: 1px solid gray;
 }
 
 
@@ -145,7 +134,6 @@ img {
     opacity: 1.0;
     font: left;
 }
-
 
 .leftSide {
 
@@ -170,8 +158,16 @@ img {
 
 }
 
-.pagination  {
-
-
-        font:right;
+.click, button {
+    margin-left: 20px;
 }
+
+.titleList h3 {
+    margin-top: 20px;
+}
+
+.username {
+    color: blue;
+    font-size: large;
+}
+
