--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -69,10 +69,10 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(45).jpg" alt="First slide">
+                                <img class="d-block w-100" src="../static/images/recenzje.png" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(46).jpg" alt="Second slide">
+                                <img class="d-block w-100" src="../static/images/bookSlide.png" alt="Second slide">
                             </div>
                             <div class="carousel-item">
                                 <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
@@ -105,27 +105,29 @@
                     </div>
 
                     {% endfor %}
-                    {% if posts.has_other_pages %}
-                      <ul class="pagination">
-                        {% if posts.has_previous %}
-                          <li><a href="?page={{ users.previous_page_number }}">&laquo;</a></li>
-                        {% else %}
-                          <li class="disabled"><span>&laquo;</span></li>
+                    <div class="d-flex justify-content-center">
+                        {% if posts.has_other_pages %}
+                          <ul class="pagination">
+                            {% if posts.has_previous %}
+                              <li><a href="?page={{ users.previous_page_number }}">&laquo;</a></li>
+                            {% else %}
+                              <li class="disabled"><span>&laquo;</span></li>
+                            {% endif %}
+                            {% for i in posts.paginator.page_range %}
+                              {% if posts.number == i %}
+                                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                              {% else %}
+                                <li><a href="?page={{ i }}">{{ i }}</a></li>
+                              {% endif %}
+                            {% endfor %}
+                            {% if posts.has_next %}
+                              <li><a href="?page={{ users.next_page_number }}">&raquo;</a></li>
+                            {% else %}
+                              <li class="disabled"><span>&raquo;</span></li>
+                            {% endif %}
+                          </ul>
                         {% endif %}
-                        {% for i in posts.paginator.page_range %}
-                          {% if posts.number == i %}
-                            <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                          {% else %}
-                            <li><a href="?page={{ i }}">{{ i }}</a></li>
-                          {% endif %}
-                        {% endfor %}
-                        {% if posts.has_next %}
-                          <li><a href="?page={{ users.next_page_number }}">&raquo;</a></li>
-                        {% else %}
-                          <li class="disabled"><span>&raquo;</span></li>
-                        {% endif %}
-                      </ul>
-                    {% endif %}
+                    </div>
                 </div>
 
                 <div class="col-sm-4">
@@ -140,6 +142,6 @@
                 </div>
             </div>
         </div>
-
+        <hr>
     </body>
 </html>
