--- a/mysite/blog/templates/reviews/reviewsList.html
+++ b/mysite/blog/templates/reviews/reviewsList.html
@@ -61,7 +61,9 @@
                         <hr>
                         <h2>Fantasy</h2>
                         {% for review in reviews %}
-                        <h3><a href="{{review.id}}/">{{review.book}}, {{review.writer}}</a></h3>
+                        <div class="titleList">
+                            <h3><a href="{{review.id}}/">{{review.book}}, {{review.writer}}</a></h3>
+                        </div>
                         <hr>
                         {% endfor %}
 
