--- a/mysite/blog/templates/acc_active_email.html
+++ b/mysite/blog/templates/acc_active_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 Witaj {{ user.username }},
-Proszę, kliknij na link poniżej w celu ukończenia rejestracji:
+W celu dokończenia rejestracji kliknij link poniżej,
 
 http://{{ domain }}{% url 'activate' uidb64=uid token=token %}
 {% endautoescape %}
