--- a/mysite/blog/templates/blog/postDetails.html
+++ b/mysite/blog/templates/blog/postDetails.html
@@ -13,12 +13,20 @@
     <body background="../static/images/background.jpg">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Aleksander Cuch</a>
-
-           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+           <a class="navbar-brand" href="../">www.harbinger.pl</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                 <ul class="nav navbar-nav navbar-right">
+                     <li class="nav-item">
+                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                    </li>
+                 </ul>
                 <ul class="nav navbar-nav navbar-center">
                     <li class="nav-item">
                         <a class="nav-link" href="../">STRONA GŁÓWNA</a>
@@ -63,7 +71,7 @@
                                 <h3>{{ post.title }}</h3>
                             </div>
                           </div>
-                          <p>{{ post.text|linebreaksbr }}</p>
+                          <p>{{ post.text|safe }}</p>
                           <div class="date">
                             <p>published: {{ post.published_date }}</p>
                           </div>
@@ -89,8 +97,8 @@
                          <h3>Komentarze: </h3>
                          {% for comment in post.comments.all reversed%}
                          <div class="comment">
-                             <p class="username">{{ comment.author }}:</p>
-                             <p>{{ comment.text|linebreaksbr  }}</p>
+                             <p class="username"><span class="fas fa-user"></span> {{ comment.author }}:</p>
+                             <p>{{ comment.text|linebreaksbr }}</p>
                              <div class="date">
                                  <p>{{ comment.created_date }}</p>
                              </div>
