--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -17,13 +17,23 @@
     <body background="static/images/background.jpg">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Aleksander Cuch</a>
-
+            <a class="navbar-brand" href="/">www.harbinger.pl</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="nav navbar-nav navbar-center">
+                 <ul class="nav navbar-nav navbar-right">
+                     <li class="nav-item">
+                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                    </li>
+
+                 </ul>
+
+                 <ul class="nav navbar-nav navbar-center">
                     <li class="nav-item">
                         <a class="nav-link" href="">STRONA GŁÓWNA</a>
                     </li>
@@ -36,16 +46,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/reviews">RECENZJE</a>
                     </li>
-                </ul>
+                 </ul>
              </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
-                    </li>
+                    </li>--->
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Wyloguj ({{ user.username }})</a>
@@ -89,7 +99,7 @@
                     </div>
 
                     <hr>
-                    <h2>Nowości:</h2>
+                    <h2>Na blogu:</h2>
                     <hr>
                      {% for post in posts %}
                     <div class="post">
@@ -133,11 +143,11 @@
                 <div class="col-sm-4">
                     <div class="aboutPanel">
                         <h5>Krótko o mnie</h5>
-                           Cześć, jestem Aleksander.</br>
-                            Studiuję informatykę, a w wolnym czasie oddaję się pasji, jaką jest pisanie.</br>
-                            Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.
-                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)<br>
-                            Jeśli chcesz dowiedzieć się więcej o mnie i o forum, zapraszam <a href="/aboutMe">tutaj</a>.
+                        Cześć, jestem Aleksander.</br>
+                            Studiuję informatykę, a&nbsp;w&nbsp;wolnym czasie oddaję się pasji, jaką&nbsp;jest pisanie.</br>
+                            Tworzę opowiadania i&nbsp;powieść w&nbsp;klimatach fantasy, więc&nbsp;jeżeli lubisz ten gatunek, to&nbsp;gorąco zapraszam do zapoznania&nbsp;się z&nbsp;moją twórczością.
+                            Najbardziej cenię sobie szczerą, zasłużoną&nbsp;krytykę&nbsp;;)<br>
+                            Jeśli chcesz dowiedzieć się więcej o&nbsp;mnie i&nbsp;o&nbsp;forum, zapraszam&nbsp;<a href="/aboutMe">tutaj</a>.
                     </div>
                 </div>
             </div>
