--- a/mysite/blog/templates/login/loginTemplate.html
+++ b/mysite/blog/templates/login/loginTemplate.html
@@ -14,12 +14,21 @@
     <body background="../static/images/background.jpg">
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Aleksander Cuch</a>
-
+            <a class="navbar-brand" href="../">www.harbinger.pl</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
              <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                 <ul class="nav navbar-nav navbar-right">
+                     <li class="nav-item">
+                        <a class="nav-link" href="/signup"><i class="fab fa-instagram"></i></a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""><i class="fab fa-facebook-f"></i> </a>
+                    </li>
+
+                 </ul>
                 <ul class="nav navbar-nav navbar-center">
                     <li class="nav-item">
                         <a class="nav-link" href="../">STRONA GŁÓWNA</a>
@@ -62,21 +71,22 @@
                     <hr>
                         {% if user.is_authenticated %}
 
-                        <p> Jesteś już zalogowany.</p>
+                        <p class="textTitle"> Jesteś już zalogowany.</p>
 
                         {% else %}
 
                     <form class="site-from" action="" method="post">
                         {% csrf_token %}
-                        <p>Username:</p>
+                        <p><span class="fas fa-user"></span> Username:</p>
                         <p>{{ form.username }}</p>
 
-                        <p>Password:</p>
+                        <p><i class="fas fa-lock"></i> Password:</p>
                         <p>{{ form.password }}</p>
                         <p>{{ form.errors }}</p>
                         <input class="click" type="submit" value="Zaloguj się" name="SignUpForm">
                         </form>
-                        Jeśli nie posiadasz jeszcze konta, <a href="/signup">Zarejestruj się</a>
+                        <p><a href="/password_reset">Zapomniałeś hasła?</a></p>
+                        <p><a href="/signup">Nie masz jeszcze konta?</a></p>
                         {% endif %}
                     </div>
                 </div>
@@ -84,3 +94,7 @@
         </div>
     </body>
 </html>
+
+
+
+
