apperance and deleting comments

--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -143,11 +143,11 @@
                 <div class="col-sm-4">
                     <div class="aboutPanel">
                         <h5>Krótko o mnie</h5>
-                        Cześć, jestem Aleksander.</br>
+                        <p>Cześć, jestem Aleksander.</br>
                             Studiuję informatykę, a&nbsp;w&nbsp;wolnym czasie oddaję się pasji, jaką&nbsp;jest pisanie.</br>
                             Tworzę opowiadania i&nbsp;powieść w&nbsp;klimatach fantasy, więc&nbsp;jeżeli lubisz ten gatunek, to&nbsp;gorąco zapraszam do zapoznania&nbsp;się z&nbsp;moją twórczością.
                             Najbardziej cenię sobie szczerą, zasłużoną&nbsp;krytykę&nbsp;;)<br>
-                            Jeśli chcesz dowiedzieć się więcej o&nbsp;mnie i&nbsp;o&nbsp;forum, zapraszam&nbsp;<a href="/aboutMe">tutaj</a>.
+                            Jeśli chcesz dowiedzieć się więcej o&nbsp;mnie i&nbsp;o&nbsp;forum, zapraszam&nbsp;<a href="/aboutMe">tutaj</a>.</p>
                     </div>
                 </div>
             </div>
