--- a/mysite/blog/templates/books/bookList.html
+++ b/mysite/blog/templates/books/bookList.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <div class="post">
-                        <h1 >Teksty</h1>
+                        <h1 class="textTitle">Teksty</h1>
                         <hr>
                         <h2>Ostatni Zwiastun - księga pierwsza</h2>
                         <p>opiso pisopisopisopisop isopisopisopisopiso </br>
@@ -86,13 +86,13 @@
                 <div class="col-sm-4">
                     <div class="aboutPanel">
                         <h5>Krótko o mnie</h5>
-                           Cześć, jestem Aleksander.</br>
-                            Studiuję informatykę, a w wolnym czasie oddaję się pasji, jaką jest pisanie.</br>
-                            Tworzę opowiadania i powieść w klimatach fantasy, więc jeżeli lubisz ten gatunek, to gorąco zapraszam do zapoznania się z moją twórczością.
-                            Najbardziej cenię sobie szczerą, zasłużoną krytykę ;)<br>
-                            Jeśli chcesz dowiedzieć się więcej o mnie i o forum, zapraszam <a href="/aboutMe">tutaj</a>.
+                        <p>Cześć, jestem Aleksander.</br>
+                            Studiuję informatykę, a&nbsp;w&nbsp;wolnym czasie oddaję się pasji, jaką&nbsp;jest pisanie.</br>
+                            Tworzę opowiadania i&nbsp;powieść w&nbsp;klimatach fantasy, więc&nbsp;jeżeli lubisz ten gatunek, to&nbsp;gorąco zapraszam do zapoznania&nbsp;się z&nbsp;moją twórczością.
+                            Najbardziej cenię sobie szczerą, zasłużoną&nbsp;krytykę&nbsp;;)<br>
+                            Jeśli chcesz dowiedzieć się więcej o&nbsp;mnie i&nbsp;o&nbsp;forum, zapraszam&nbsp;<a href="/aboutMe">tutaj</a>.</p>
                     </div>
-                 </div>
+                </div>
             </div>
         </div>
     </body>
