--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -11,8 +11,7 @@
 }
 
 .post {
-    background-color: white;
-    opacity: 0.7;
+    background-color: rgba(255,255,255, 0.7);
 }
 
 
@@ -141,13 +140,18 @@ img {
      border: 1px solid gray;
 }
 
-img {
+.carousel-inner img {
     border: 2px solid gray;
 }
 
 #myImage {
+    border: 2px solid gray;
+    max-width: 200px;
     margin-top: 15px;
     margin-left: 15px;
+}
+#anotherImage {
+    max-width: 250px;
 }
 
  .pagination li {
@@ -171,3 +175,21 @@ img {
     font-size: large;
 }
 
+.comment {
+    background-color: rgba(255,255,255, 0.5);
+
+}
+
+.review img{
+margin-top:15px;
+margin-left:15px;
+margin-right:15px;
+float:top;
+width: 90%;
+height: 90%;
+
+}
+
+.review p {
+    float: right;
+}
