--- a/mysite/blog/templates/about/aboutMe.html
+++ b/mysite/blog/templates/about/aboutMe.html
@@ -215,9 +215,20 @@
 
                 </div>
 
-                <div class="col-sm-3">
-                        <img id="myImage" src="../static/images/myFoto.png" alt="Błąd obrazka!">
+                <div class="col-sm-3 leftSide">
+
+                    <img id="myImage" src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.0-9/14141633_1111643665597304_5943056743569652872_n.jpg?_nc_cat=102&_nc_ht=scontent-waw1-1.xx&oh=80006dd38613c9be960d159c003190cd&oe=5D90763C" alt="Błąd obrazka!">
                     <hr>
+                    <h4 class="textTitle">Dane kontaktowe</h4>
+                    <hr>
+                    <p><i class="fas fa-at"></i> cuch.aleksander@gmail.com</p>
+                    <p><i class="fab fa-instagram"><a href="https://www.instagram.com/aleksandercuch/"></i> aleksandercuch</a></p>
+                    <p><i class="fab fa-facebook-f"></i><a href=""></a></p>
+                    <p><i class="fab fa-linkedin-in"></i><a href="https://www.linkedin.com/in/aleksander-cuch-161118180/"> aleksandercuch</a></p>
+                    <hr>
+                    <img id="anotherImage" src="https://cdn.pixabay.com/photo/2017/06/19/02/00/embroidery-2417899_960_720.png" alt="Błąd obrazka!">
+
+
                 </div>
             </div>
         </div>
