--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -84,6 +84,9 @@ body {
      border: 1px solid gray;
      margin-left: 30px;
 }
+.aboutPanel p {
+    padding: 7px;
+}
 
 
 #carouselExampleControls {
@@ -192,4 +195,14 @@ height: 90%;
 
 .review p {
     float: right;
+}
+
+.aboutPanel h1, h2, h3, h4, h5, img {
+    margin-top:10px;
+
+}
+
+.aboutPanel img {
+
+    height: 25%;
 }
