--- a/mysite/blog/templates/reviews/reviewsList.html
+++ b/mysite/blog/templates/reviews/reviewsList.html
@@ -86,7 +86,7 @@
 
                         <hr>
                         {% endfor %}
-                        sss
+                        
                     </div>
                 </div>
                  <div class="col-sm-4">
@@ -97,6 +97,14 @@
                             Tworzę opowiadania i&nbsp;powieść w&nbsp;klimatach fantasy, więc&nbsp;jeżeli lubisz ten gatunek, to&nbsp;gorąco zapraszam do zapoznania&nbsp;się z&nbsp;moją twórczością.
                             Najbardziej cenię sobie szczerą, zasłużoną&nbsp;krytykę&nbsp;;)<br>
                             Jeśli chcesz dowiedzieć się więcej o&nbsp;mnie i&nbsp;o&nbsp;forum, zapraszam&nbsp;<a href="/aboutMe">tutaj</a>.</p>
+                    </div>
+                     <div class="aboutPanel">
+                         <h4>W kolejce do recenzji</h4>
+                         <hr>
+                         <a href=""><img src="https://ecsmedia.pl/c/wyrocznia-virion-tom-1-w-iext51598004.jpg"></a>
+                         <hr>
+                         <a href=""><img src="https://ecsmedia.pl/c/pol-krola-morze-drzazg-tom-1-w-iext43259274.jpg"></a>
+                         <hr>
                     </div>
                 </div>
             </div>
