urls and background in css

--- a/mysite/blog/templates/signup.html
+++ b/mysite/blog/templates/signup.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 
     </head>
-   <body background="../static/images/background.jpg">
+   <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <a class="navbar-brand" href="../">www.harbinger.pl</a>
