--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -205,3 +205,7 @@ float:top;
 
     height: 25%;
 }
+
+body {
+    background-image: url("https://cn.opendesktop.org/img/7/0/b/7/78fac5cbf5075f91becf299fb2fc5efb4c43.jpg");
+}
