--- a/mysite/blog/templates/blog/postList.html
+++ b/mysite/blog/templates/blog/postList.html
@@ -13,7 +13,7 @@
         <link href="{{STATIC_URL}}froala_editor/css/froala_style.min.css" type="text/css" media="all" rel="stylesheet" />
         <script type="text/javascript" src="{{STATIC_URL}}froala_editor/js/froala_editor.min.js"></script>
     </head>
-    <body background="static/images/background.jpg">
+    <body>
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">www.harbinger.pl</a>
@@ -72,13 +72,13 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="../static/images/recenzje.png" alt="First slide">
+                                <img class="d-block w-100" src="link" alt="First slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../static/images/bookSlide.png" alt="Second slide">
+                                <img class="d-block w-100" src="link" alt="Second slide">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(47).jpg" alt="Third slide">
+                                <img class="d-block w-100" src="link" alt="Third slide">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
